array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  
  var nbils = 0
  
  
  
}